# BetterBDM

./: CMakeLists.txt  README.md  SPEC.md  build.bat  build.cmd
core/: core.cpp  core.h  flutter_bridge.cpp  flutter_bridge.h  hook_manager.cpp  hook_manager.h  plugin_manager.cpp  plugin_manager.h
include/: bdmicros.h  plugin_api.h
injector/: injector.cpp  injector.h  pe_utils.cpp  pe_utils.h  process_utils.cpp  process_utils.h
plugins/media_control/: plugin.cpp  plugin.json
